language/move-prover/interpreter-testsuite/tests/concrete_check/property/global_basics.exp
Running Move unit tests
[ FAIL    ] 0x2::A::check_global_basics_fail
[ PASS    ] 0x2::A::check_global_basics_ok

Test failures:

Failures in 0x2::A:

┌── check_global_basics_fail ──────
│ error: failed to evaluate expression
│
│     ┌── tests/concrete_check/property/global_basics.move:28:20 ───
│     │
│  28 │             assert global<R>(a).f2 == 42;
│     │                    ^^^^^^^^^^^^^^^^^^^^^
│     │
│
│
└──────────────────

Test result: FAILED. Total tests: 2; passed: 1; failed: 1
